--- a/AdSanare.Core/Views/Ingreso/Create.cshtml
+++ b/AdSanare.Core/Views/Ingreso/Create.cshtml
@@ -52,7 +52,7 @@
         <h3 class="card-title">Ingresar Paciente</h3>
     </div>
     <form asp-antiforgery="true" asp-action="Create" method="post">
-        <div id="modalPaciente" class="modal fade" role="dialog" data-url="@Url.Action("Create","Paciente", new { iPaciente = "iPaciente"})">
+        <div id="modalPaciente" class="modal fade" role="dialog" data-url="@Url.Action("Create","Paciente", new { iPaciente = new Paciente() })">
         </div>
         <div class="card-body">
             <div class="form-group col-md-12">
